<resources>
    <string name="app_name">华师大时间银行</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">广告</string>
    <string name="title_notifications">通知</string>
    <string name="title_activity_requirement_detail">订单详情</string>
    <string name="title_activity_requirement_list">需求列表</string>
    <string name="title_activity_my_requirement">我的需求</string>

    <string name="published_requirement">已发布</string>
    <string name="accepted_requirement">已接受</string>
    <string name="title_activity_publish_detail">发布需求</string>
    <string name="filter_dialog_title">筛选</string>
    <string name="filter_dialog_accept">确认</string>

    <!-- Strings used for fragments for navigation -->
    <string name="login_success">登陆成功</string>
    <string name="login">登录</string>
    <string name="Username">手机号</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码 ?</string>
    <string name="go">Go!</string>
    <string name="repeat_password">重复密码</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>

    <!-- 发布页面-->
    <string name="published_hint">请输入您要发布的内容</string>
    <string name="name">姓名</string>
    <string name="time">时间</string>
    <string name="telephone">手机</string>
    <string name="address">地址</string>
    <string name="type">类型</string>
    <string name="description">需求描述</string>
    <string name="publish_confirm">确认发布</string>
    <string name="titie_volunteer">志愿者</string>
    <string name="title_facility">设施详情</string>
    <string name="accept_requirement">接收订单</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="cancel">取消</string>

    <!-- 个人信息页面 -->
    <string name="nickname">用户名</string>
    <string name="whitespace_telephone">\t\t手机</string>
    <string name="whitespace_nickname">\t\t用户名</string>
    <string name="timeBank">我的时间银行</string>
    <string name="identity_authentication">身份认证</string>
    <string name="accountNumber">\t\t账号</string>
    <string name="identityAuthentication">\t\t资格认证</string>
    <string name="exchangeCash">\t\t时间券兑换</string>
    <string name="myTime">我的时间券</string>
    <string name="myBalance">余额</string>
    <string name="setTextSize">\t\t调整字体大小</string>
    <string name="profile">\t\t头像</string>
    <string name="id_number">\t\t账号</string>
    <string name="gender">\t\t性别</string>
    <string name="studentNumber">学号/工号</string>
    <string name="hint">在此输入</string>
    <string name="databasePassword">数据库密码</string>
    <string name="submit">提交</string>
    <string name="advertise">广告位招租啦!</string>
    <string name="acount_management"><u>管理我的用户</u></string>

    <string name="username_input_error">手机号无效</string>
    <string name="passwd_input_error">密码无效(请输入6~18位数字或字母符号)</string>
    <string name="title">标题</string>

</resources>
