<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studentNumber"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:id="@+id/xhgh"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/xhgh"
            android:layout_marginTop="30dp"
            android:hint="@string/hint"
            android:inputType="text"
            android:id="@+id/xuehao_gonghao"
            android:layout_toEndOf="@id/xhgh" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/databasePassword"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:id="@+id/pw"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/pw"
            android:layout_marginTop="100dp"
            android:hint="@string/hint"
            android:inputType="text"
            android:id="@+id/IA_password"
            android:layout_toEndOf="@id/pw"
            tools:ignore="TextFields" />
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:id="@+id/IA_submit"/>



</LinearLayout>
