<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:background="@drawable/gray_background">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/gray_background"
                    android:id="@+id/background_profile"/>
            </LinearLayout>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/profile"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/profile_imageView"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:textSize="20sp"
                android:text="@string/nickname"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/nickname_textView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:textSize="20sp"
                android:text="@string/telephone"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/accountNumber_textView"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/arrow_right"
                android:layout_alignParentRight="true"
                android:layout_marginTop="145dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:id="@+id/next_imageView"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:orientation="vertical"
            android:background="@drawable/gray_background"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:text="@string/identityAuthentication"
            android:background="@drawable/white_background"
            android:id="@+id/identityAuthentication_textView"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@drawable/gray_background"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/exchangeCash"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:background="@drawable/white_background"
            android:id="@+id/myBank_textView"/>
        </LinearLayout>

</LinearLayout>
